// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`External Link matches snapshot (disabled) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c1 {
  color: #7fbfd2;
}

.c1:visited {
  color: #094C6C;
}

.c1:visited svg {
  color: #094C6C;
}

<a
  aria-disabled="true"
  class="c0 c1"
  disabled=""
  type="external"
>
  External Link
</a>
`;

exports[`External Link matches snapshot (label and icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c1 {
  color: #0080A5;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:visited {
  color: #094C6C;
}

.c1:visited svg {
  color: #094C6C;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href="#"
  type="external"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  External Link
</a>
`;

exports[`External Link matches snapshot (only icon) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: 0;
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c1 {
  color: #0080A5;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:visited {
  color: #094C6C;
}

.c1:visited svg {
  color: #094C6C;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href="#"
  type="external"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
</a>
`;

exports[`External Link matches snapshot (without href) 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c1 {
  color: #0080A5;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:visited {
  color: #094C6C;
}

.c1:visited svg {
  color: #094C6C;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href=""
  type="external"
>
  <svg
    color="currentColor"
    focusable="false"
    height="16"
    width="16"
  />
  External Link
</a>
`;

exports[`External Link matches snapshot 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 svg {
  margin-right: var(--spacing-1x);
}

.c0:focus {
  outline: none;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

.c1 {
  color: #0080A5;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:visited {
  color: #094C6C;
}

.c1:visited svg {
  color: #094C6C;
}

<a
  aria-disabled="false"
  class="c0 c1"
  href="https://www.google.ca/"
  type="external"
>
  External Link
</a>
`;
